discussion/jgit/163401/163401_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Fix BadComparable error flagged by error prone

Running recent error prone version complaining on that code:

LfsPointer.java:171: error: [BadComparable] Possible sign flip from
narrowing conversion
		return (int) (getSize() - o.getSize());
		       ^
    (see https://errorprone.info/bugpattern/BadComparable)
  Did you mean 'return Long.compare(getSize(), o.getSize());'?

Bug: 562756
Change-Id: I0522f1025319a9290c448a064fbafdb4b16d1d59
Signed-off-by: David Ostrovsky <david@ostrovsky.org>

======================================================================================================================
COMMENTS
======================================================================================================================
Author: David Pursehouse
Date: 2020-06-01 00:05:46.000000000
Message: 
Patch Set 3: Patch Set 2 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-06-01 00:05:55.000000000
Message: 
Patch Set 3:

Build Started https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3234/
----------------------------------------------------------------------------------------------------------------------
Author: Matthias Sohn
Date: 2020-06-01 00:18:35.000000000
Message: 
Patch Set 3: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-06-01 01:34:56.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3234/ : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-06-01 22:56:23.000000000
Message: 
Patch Set 3: -Verified

Build Started https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3252/
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-06-01 23:10:18.000000000
Message: 
Patch Set 3: Verified+1

Build Successful 

https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3252/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
